--- a/csit/docker-compose-all.yml
+++ b/csit/docker-compose-all.yml
@@ -2,7 +2,7 @@
 # ===========LICENSE_START====================================================
 #  Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 #  Modifications Copyright (C) 2021 Bell Canada. All rights reserved.
-#  Modification Copyright 2021. Nordix Foundation.
+#  Modification Copyright 2021-2022 Nordix Foundation.
 # ============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -20,25 +20,25 @@
 version: '2'
 services:
    mariadb:
-      image: nexus3.onap.org:10001/mariadb:${POLICY_MARIADB_VER}
+      image: ${CONTAINER_LOCATION}mariadb:${POLICY_MARIADB_VER}
       container_name: mariadb
       hostname: mariadb
       command: ['--lower-case-table-names=1', '--wait_timeout=28800']
-      env_file: config/db/db.conf
+      env_file: ./config/db/db.conf
       volumes:
          - ./config/db:/docker-entrypoint-initdb.d:ro
          - ./config/clamp/policy-clamp-create-tables.sql:/tmp/policy-clamp-create-tables.sql
-      expose:
-       - 3306
+      ports:
+       - 3306:3306
    policy-db-migrator:
-      image: nexus3.onap.org:10001/onap/policy-db-migrator:${POLICY_DOCKER_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-db-migrator:${POLICY_DOCKER_VERSION}
       container_name: policy-db-migrator
       hostname: policy-db-migrator
       depends_on:
         - mariadb
       expose:
        - 6824
-      env_file: config/db/db.conf
+      env_file: ./config/db/db.conf
       environment:
         SQL_DB: policyadmin
         SQL_HOST: mariadb
@@ -52,7 +52,7 @@ services:
                 'mariadb', '3306'
                ]
    simulator:
-      image: nexus3.onap.org:10001/onap/policy-models-simulator:${POLICY_MODELS_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-models-simulator:${POLICY_MODELS_VERSION}
       container_name: simulator
       hostname: simulator
       networks:
@@ -66,26 +66,25 @@ services:
                   - vfc-sim
       volumes:
        - ./config/sim-all:/opt/app/policy/simulators/etc/mounted:ro
-       - ./config/ks.jks:/opt/app/policy/simulators/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/simulators/etc/ssl/policy-truststore:ro
+       - ./config/sim-all/logback.xml:/opt/app/policy/simulators/etc/mounted/logback.xml:ro
       expose:
        - 6666
        - 6668
        - 6669
        - 6670
-       - 3905
+       - 3904
        - 6680
    api:
-      image: nexus3.onap.org:10001/onap/policy-api:${POLICY_API_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-api:${POLICY_API_VERSION}
       container_name: policy-api
       depends_on:
        - policy-db-migrator
       hostname: policy-api
-      expose:
-       - 6969
+      ports:
+       - 30440:6969
       volumes:
-       - ./config/ks.jks:/opt/app/policy/api/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/api/etc/ssl/policy-truststore:ro
+       - ./config/api/apiParameters.yaml:/opt/app/policy/api/etc/apiParameters.yaml:ro
+       - ./config/api/logback.xml:/opt/app/policy/api/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/api/bin/wait_for_port.sh:ro
       entrypoint: ./wait_for_port.sh
       command: [
@@ -94,74 +93,72 @@ services:
         'policy-db-migrator', '6824'
         ]
    pap:
-      image: nexus3.onap.org:10001/onap/policy-pap:${POLICY_PAP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-pap:${POLICY_PAP_VERSION}
       container_name: policy-pap
       depends_on:
        - mariadb
        - simulator
        - api
       hostname: policy-pap
-      expose:
-       - 6969
+      ports:
+       - 30442:6969
       volumes:
        - ./config/pap/papParameters.yaml:/opt/app/policy/pap/etc/papParameters.yaml:ro
-       - ./config/pap/groups.json:/opt/app/policy/pap/etc/mounted/groups.json:ro
-       - ./config/ks.jks:/opt/app/policy/pap/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/pap/etc/ssl/policy-truststore:ro
+       - ./config/${PROJECT}/groups.json:/opt/app/policy/pap/etc/mounted/groups.json:ro
+       - ./config/pap/logback.xml:/opt/app/policy/pap/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/pap/bin/wait_for_port.sh:ro
       entrypoint: ./wait_for_port.sh
       command: [
         '-c', './policy-pap.sh',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'api', '6969'
         ]
    xacml-pdp:
-      image: nexus3.onap.org:10001/onap/policy-xacml-pdp:${POLICY_XACML_PDP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-xacml-pdp:${POLICY_XACML_PDP_VERSION}
       container_name: policy-xacml-pdp
       depends_on:
        - mariadb
        - simulator
        - pap
       hostname: policy-xacml-pdp
-      expose:
-       - 6969
+      ports:
+       - 30441:6969
       volumes:
        - ./config/xacml-pdp/defaultConfig.json:/opt/app/policy/pdpx/etc/defaultConfig.json:ro
-       - ./config/ks.jks:/opt/app/policy/pdpx/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/pdpx/etc/ssl/policy-truststore:ro
+       - ./config/xacml-pdp/logback.xml:/opt/app/policy/pdpx/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/pdpx/bin/wait_for_port.sh:ro
       entrypoint: ./wait_for_port.sh
       command: [
         '-c', './policy-pdpx.sh',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'pap', '6969'
         ]
    drools:
-      image: nexus3.onap.org:10001/onap/policy-drools:${POLICY_DROOLS_PDP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-drools:${POLICY_DROOLS_PDP_VERSION}
       container_name: drools
       depends_on:
        - mariadb
        - simulator
        - pap
       hostname: drools
-      expose:
-       - 6969
-       - 9696
+      ports:
+       - 30217:6969
+       - 30216:9696
       volumes:
-       - ./config/drools/custom:/tmp/policy-install/config:ro
+       - ./config/drools-pdp/custom:/tmp/policy-install/config:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       env_file:
-        - config/drools/env/base.conf
+        - ./config/drools-pdp/env/base.conf
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', '/opt/app/policy/bin/pdpd-entrypoint.sh boot',
         'mariadb', '3306',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
    drools-apps:
-      image: nexus3.onap.org:10001/onap/policy-pdpd-cl:${POLICY_DROOLS_APPS_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-pdpd-cl:${POLICY_DROOLS_APPS_VERSION}
       container_name: drools-apps
       depends_on:
        - mariadb
@@ -169,22 +166,21 @@ services:
        - pap
        - xacml-pdp
       hostname: drools-apps
-      expose:
-       - 6969
-       - 9696
+      ports:
+       - 30221:6969
+       - 30219:9696
       volumes:
-       - ./config/drools-apps/custom:/tmp/policy-install/config:ro
-       - ./config/drools-apps/custom/feature-lifecycle.properties:/opt/app/policy/features/lifecycle/config/feature-lifecycle.properties:ro
+       - ./config/drools-applications/custom:/tmp/policy-install/config:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       env_file:
-        - config/drools-apps/env/base.conf
-        - config/drools-apps/env/feature-healthcheck.conf
-        - config/drools-apps/env/feature-pooling-dmaap.conf
+        - ./config/drools-applications/env/base.conf
+        - ./config/drools-applications/env/feature-healthcheck.conf
+        - ./config/drools-applications/env/feature-pooling-dmaap.conf
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', '/opt/app/policy/bin/pdpd-cl-entrypoint.sh boot',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'pap', '6969',
         'aai-sim', '6666',
         'sdnc-sim', '6668',
@@ -192,30 +188,28 @@ services:
         'vfc-sim', '6670'
         ]
    apex-pdp:
-      image: nexus3.onap.org:10001/onap/policy-apex-pdp:${POLICY_APEX_PDP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-apex-pdp:${POLICY_APEX_PDP_VERSION}
       container_name: policy-apex-pdp
       depends_on:
        - mariadb
        - simulator
        - pap
       hostname: policy-apex-pdp
-      expose:
-       - 6969
-       - 23324
+      ports:
+       - 30237:6969
       volumes:
        - ./config/apex-pdp/OnapPfConfig.json:/opt/app/policy/apex-pdp/etc/onappf/config/OnapPfConfig.json:ro
-       - ./config/ks.jks:/opt/app/policy/apex-pdp/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/apex-pdp/etc/ssl/policy-truststore:ro
+       - ./config/apex-pdp/logback.xml:/opt/app/policy/apex-pdp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', '/opt/app/policy/apex-pdp/bin/apexOnapPf.sh -c /opt/app/policy/apex-pdp/etc/onappf/config/OnapPfConfig.json',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'pap', '6969'
         ]
    distribution:
-      image: nexus3.onap.org:10001/onap/policy-distribution:${POLICY_DISTRIBUTION_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-distribution:${POLICY_DISTRIBUTION_VERSION}
       container_name: policy-distribution
       depends_on:
        - mariadb
@@ -225,84 +219,127 @@ services:
       hostname: policy-distribution
       volumes:
        - ./config/distribution/defaultConfig.json:/opt/app/policy/distribution/etc/defaultConfig.json:ro
-       - ./config/ks.jks:/opt/app/policy/distribution/etc/ssl/policy-keystore:ro
-       - ./config/policy-truststore:/opt/app/policy/distribution/etc/ssl/policy-truststore:ro
        - ./distribution/config/temp/:/opt/app/policy/distribution/etc/temp/:ro
+       - ./config/distribution/logback.xml:/opt/app/policy/distribution/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './policy-dist.sh',
         'mariadb', '3306',
-        'message-router', '3905',
+        'message-router', '3904',
         'pap', '6969',
         'apex-pdp', '6969'
         ]
    policy-clamp-runtime-acm:
-      image: nexus3.onap.org:10001/onap/policy-clamp-runtime-acm:${POLICY_CLAMP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-clamp-runtime-acm:${POLICY_CLAMP_VERSION}
       container_name: policy-clamp-runtime-acm
       depends_on:
        - mariadb
        - simulator
       hostname: policy-clamp-runtime-acm
-      expose:
-       - 6969
+      ports:
+       - 30258:6969
       volumes:
-       - ./config/policy-truststore:/opt/app/policy/clamp/etc/ssl/policy-truststore:ro
+       - ./config/clamp/AcRuntimeParameters.yaml:/opt/app/policy/clamp/etc/AcRuntimeParameters.yaml
+       - ./config/clamp/logback.xml:/opt/app/policy/clamp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/clamp/etc/ssl/policy-keystore:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './acm-runtime.sh',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
    policy-clamp-ac-http-ppnt:
-      image: nexus3.onap.org:10001/onap/policy-clamp-ac-http-ppnt:${POLICY_CLAMP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-clamp-ac-http-ppnt:${POLICY_CLAMP_VERSION}
       container_name: policy-clamp-ac-http-ppnt
+      depends_on:
+       - simulator
       hostname: policy-clamp-ac-http-ppnt
-      expose:
-       - 6971
+      ports:
+       - 30290:6969
       volumes:
-       - ./config/policy-truststore:/opt/app/policy/clamp/etc/ssl/policy-truststore:ro
+       - ./config/clamp/HttpParticipantParameters.yaml:/opt/app/policy/clamp/etc/HttpParticipantParameters.yaml
+       - ./config/clamp/logback.xml:/opt/app/policy/clamp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/clamp/etc/ssl/policy-keystore:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './http-participant.sh',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
    policy-clamp-ac-k8s-ppnt:
-      image: nexus3.onap.org:10001/onap/policy-clamp-ac-k8s-ppnt:${POLICY_CLAMP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-clamp-ac-k8s-ppnt:${POLICY_CLAMP_VERSION}
       container_name: policy-clamp-ac-k8s-ppnt
+      depends_on:
+       - simulator
       hostname: policy-clamp-ac-k8s-ppnt
-      expose:
-       - 6972
+      ports:
+       - 30295:6969
       volumes:
-       - ./config/policy-truststore:/opt/app/policy/clamp/etc/ssl/policy-truststore:ro
+       - ./config/clamp/KubernetesParticipantParameters.yaml:/opt/app/policy/clamp/etc/KubernetesParticipantParameters.yaml
+       - ./config/clamp/logback.xml:/opt/app/policy/clamp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/clamp/etc/ssl/policy-keystore:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './kubernetes-participant.sh',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
    policy-clamp-ac-pf-ppnt:
-      image: nexus3.onap.org:10001/onap/policy-clamp-ac-pf-ppnt:${POLICY_CLAMP_VERSION}
+      image: ${CONTAINER_LOCATION}onap/policy-clamp-ac-pf-ppnt:${POLICY_CLAMP_VERSION}
       container_name: policy-clamp-ac-pf-ppnt
       depends_on:
        - simulator
        - api
-       - policy-clamp-ac-http-ppnt
-       - policy-clamp-ac-k8s-ppnt
       hostname: policy-clamp-ac-pf-ppnt
-      expose:
-       - 6973
+      ports:
+       - 30218:6969
       volumes:
-       - ./config/policy-truststore:/opt/app/policy/clamp/etc/ssl/policy-truststore:ro
+       - ./config/clamp/PolicyParticipantParameters.yaml:/opt/app/policy/clamp/etc/PolicyParticipantParameters.yaml:ro
+       - ./config/clamp/logback.xml:/opt/app/policy/clamp/etc/logback.xml:ro
        - ./wait_for_port.sh:/opt/app/policy/bin/wait_for_port.sh:ro
-       - ./config/ks.jks:/opt/app/policy/clamp/etc/ssl/policy-keystore:ro
-       - ./config/clamp/PolicyParticipantParameters.yaml:/opt/app/policy/clamp/config/PolicyParticipantParameters.yaml:ro
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './policy-participant.sh',
-        'message-router', '3905'
+        'message-router', '3904'
         ]
+   policy-gui:
+     image: ${CONTAINER_LOCATION}onap/policy-gui:latest
+     container_name: policy-gui
+     depends_on:
+      - policy-clamp-backend
+     hostname: policy-gui
+     environment:
+       CLAMP_URL: http://policy-clamp-backend:8445
+       CLAMP_DISABLE_SSL_VALIDATION: "true"
+     ports:
+      - 2445:2445
+     volumes:
+      - ./config/policy-gui/application.yaml:/opt/app/policy/gui/etc/application.yml
+      - ./config/policy-gui/logback.xml:/opt/app/policy/gui/etc/logback.xml:ro
+      - ./wait_for_port.sh:/opt/app/policy/gui/bin/wait_for_port.sh:ro
+     entrypoint: ./policy-gui.sh
+     working_dir: /opt/app/policy/gui/bin
+     command: ./policy-gui.sh
+   policy-clamp-backend:
+     image: ${CONTAINER_LOCATION}onap/policy-clamp-backend:${POLICY_CLAMP_VERSION}
+     container_name: policy-clamp-backend
+     depends_on:
+      - policy-clamp-runtime-acm
+      - distribution
+     hostname: policy-clamp-backend
+     environment:
+        POLICY_API_HOST: api
+        POLICY_PAP_HOST: pap
+        MARIADB_HOST: mariadb
+        RUNTIME_HOST: policy-clamp-runtime-acm
+     ports:
+      - 8445:8445
+     volumes:
+      - ./config/clamp/ClampBackend.properties:/opt/policy/clamp/config/ClampBackend.properties:ro
+      - ./config/clamp/logback-backend.xml:/opt/policy/clamp/config/logback.xml:ro
+     working_dir: /opt/policy/clamp
+     command: java
+      -Djava.security.egd=file:/dev/./urandom
+      -XX:MinRAMPercentage=50
+      -XX:MaxRAMPercentage=75
+      -jar ./policy-clamp-backend.jar
+      --spring.config.name=ClampBackend
+      --spring.config.location=/opt/policy/clamp/config/ClampBackend.properties
