Fix minor issues with CSITs
Issue-ID: POLICY-4350
Change-Id: I2bbc47122aa5984fbe3f03edc252ea56e47dba73
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/policy-jdk/alpine/pom.xml
+++ b/policy-jdk/alpine/pom.xml
@@ -180,8 +180,8 @@
 
                 <executions>
                     <execution>
-                        <id>clean-images</id>
-                        <phase>prepare-jdk-package</phase>
+                        <id>clean-jdk-image</id>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>remove</goal>
                         </goals>
@@ -191,7 +191,7 @@
                     </execution>
 
                     <execution>
-                        <id>generate-jdk-images</id>
+                        <id>generate-jdk-image</id>
                         <phase>package</phase>
                         <goals>
                             <goal>build</goal>
@@ -199,7 +199,7 @@
                     </execution>
 
                     <execution>
-                        <id>push-jdk-images</id>
+                        <id>push-jdk-image</id>
                         <phase>deploy</phase>
                         <goals>
                             <goal>build</goal>
