--- a/csit/docker-compose-all.yml
+++ b/csit/docker-compose-all.yml
@@ -246,6 +246,7 @@ services:
       entrypoint: /opt/app/policy/bin/wait_for_port.sh
       command: [
         '-c', './acm-runtime.sh',
+        'mariadb', '3306',
         'message-router', '3904'
         ]
    policy-clamp-ac-http-ppnt:
