--- a/csit/config/clamp/AcRuntimeParameters.yaml
+++ b/csit/config/clamp/AcRuntimeParameters.yaml
@@ -34,6 +34,8 @@ server:
   port: 6969
   ssl:
     enabled: false
+  servlet:
+    context-path: /onap/policy/clamp/acm
   error:
     path: /error
 
