Convert CSIT tests to use HTTP rather than HTTPS
This commit converts the CSITs from HTTPS to HTTP. It also does some
refactoring and tidying up on the CSIT environment.

Issue-ID: POLICY-4338
Change-Id: I02afa5c7a585470fa0bda521e97bf1cdcf6a95c2
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/csit/config/clamp/ClRuntimeParameters.yaml
+++ b/csit/config/clamp/ClRuntimeParameters.yaml
@@ -16,7 +16,8 @@ server:
     context-path: /onap/controlloop
   error:
     path: /error
-
+  ssl:
+    enabled: false
 
 runtime:
   supervisionScannerIntervalSec: 1000
@@ -44,14 +45,14 @@ runtime:
           - ${topicServer:message-router}
         topicCommInfrastructure: dmaap
         fetchTimeout: 15000
-        useHttps: true
+        useHttps: false
     topicSinks:
       -
         topic: POLICY-CLRUNTIME-PARTICIPANT
         servers:
           - ${topicServer:message-router}
         topicCommInfrastructure: dmaap
-        useHttps: true
+        useHttps: false
 
 management:
   endpoints:
