--- a/csit/config/clamp/PolicyParticipantParameters.yaml
+++ b/csit/config/clamp/PolicyParticipantParameters.yaml
@@ -8,7 +8,7 @@ participant:
     port: 6969
     userName: healthcheck
     password: zb!XztG34
-    useHttps: true
+    useHttps: false
     allowSelfSignedCerts: true
   policyPapParameters:
     clientName: pap
@@ -16,7 +16,7 @@ participant:
     port: 6969
     userName: healthcheck
     password: zb!XztG34
-    useHttps: true
+    useHttps: false
     allowSelfSignedCerts: true
   intermediaryParameters:
     reportingTimeIntervalMs: 120000
@@ -35,11 +35,16 @@ participant:
             - ${topicServer:message-router}
           topicCommInfrastructure: dmaap
           fetchTimeout: 15000
-          useHttps: true
+          useHttps: false
       topicSinks:
         -
           topic: POLICY-CLRUNTIME-PARTICIPANT
           servers:
             - ${topicServer:message-router}
           topicCommInfrastructure: dmaap
-          useHttps: true
+          useHttps: false
+
+server:
+  ssl:
+    enabled: false
+          
