--- a/csit/config/drools-apps/env/base.conf
+++ b/csit/config/drools-apps/env/base.conf
@@ -1,6 +1,7 @@
 # ============LICENSE_START==================================================
 # Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # Modifications Copyright (C) 2021 Bell Canada. All rights reserved.
+# Modifications Copyright (C) 2022 Nordix Foundation.
 # ===========================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -59,7 +60,7 @@ AAF_HOST=aaf.api.simpledemo.onap.org
 
 # HTTP Servers
 
-HTTP_SERVER_HTTPS=true
+HTTP_SERVER_HTTPS=false
 PROMETHEUS=true
 
 # PDP-D DMaaP configuration channel
@@ -94,6 +95,7 @@ PDP_PASSWORD=zb!XztG34
 PDP_CLIENT_USERNAME=python
 PDP_CLIENT_PASSWORD=test
 PDP_ENVIRONMENT=TEST
+PDP_HTTPS=false
 
 # DCAE DMaaP
 
@@ -104,7 +106,7 @@ DCAE_CONSUMER_GROUP=dcae.policy.shared
 # Open DMaaP
 
 DMAAP_SERVERS=message-router
-DMAAP_HTTPS=true
+DMAAP_HTTPS=false
 
 # AAI
 
@@ -113,13 +115,14 @@ AAI_PORT=6666
 AAI_CONTEXT_URI=
 AAI_USERNAME=policy@policy.onap.org
 AAI_PASSWORD=demo123456!
+AAI_HTTPS=false
 
 # MSO
 
 SO_HOST=so-sim
 SO_PORT=6669
 SO_CONTEXT_URI=
-SO_URL=https://message-router:6669/
+SO_URL=http://message-router:6669/
 SO_USERNAME=InfraPortalClient
 SO_PASSWORD=password1$
 
