--- a/csit/config/apex-pdp/OnapPfConfig.json
+++ b/csit/config/apex-pdp/OnapPfConfig.json
@@ -5,7 +5,7 @@
         "port": 6969,
         "userName": "healthcheck",
         "password": "zb!XztG34",
-        "https": true,
+        "https": false,
         "prometheus": true
     },
     "pdpStatusParameters":{
@@ -29,13 +29,13 @@
             "topic" : "POLICY-PDP-PAP",
             "servers" : [ "message-router" ],
             "topicCommInfrastructure" : "dmaap",
-            "useHttps" : true
+            "useHttps" : false
         }],
         "topicSinks" : [{
             "topic" : "POLICY-PDP-PAP",
             "servers" : [ "message-router" ],
             "topicCommInfrastructure" : "dmaap",
-            "useHttps" : true
+            "useHttps" : false
         }]
     }
 }
